--- a/sites/all/themes/cg_theme/sass/components/_misc.scss
+++ b/sites/all/themes/cg_theme/sass/components/_misc.scss
@@ -898,7 +898,7 @@ img.step-inner {
  }
 
  .step  {
-   background-image: url('images/circle-smaller-section1.png');
+   background-image: url('http://dev-2.academyvm.dev/proj-cg/sites/all/themes/cg_theme/images/circle-smaller-section1.png');
    background-repeat: no-repeat;
    display: inline-flex;
  }
@@ -915,6 +915,7 @@ img.step-inner {
   font-weight: bold;
   font-size: 26px;
   color: gray;
+  margin-top: 20px;
  }
 /******************** Section Two Style **********************************/
 
